			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: crash in PL_open_query() on undefined predicate.  Wim Delvaux.

  * FIXED: Doubles in the head on 64-bit platforms.  With many thinks to
    Christoph Quix for the research.

  * FIXED: Bug#27: set_stream_property/2 for representation errors.  
    Jiri Spitz.

VERSION 5.5.11 (March 15, 2005)
===============================

  * FIXED: PL_get_chars() using REP_UTF8.

  * ADDED: rewrite of `xos' layer to do all interaction in UTF-8, mapping
    to Windows UNICODE filenames.  Allows for accessing the filesystem using
    UNICODE names.

  * ADDED: setlocale/3: change/query locale settings at runtime.

  * CLEANUP: deleted old win32s stuff from uxnt.c


VERSION 5.5.10 (March 09, 2005)
===============================

  * FIXED: Support locales in communicating filenames.

  * ADDED: Pl_unify_chars().

  * MODIFIED: copy_stream_data/[2,3] now copies using get_code/2 and
    put_code/2 semantics instead of byte-by-byte.

  * ADDED: Multibyte encodings for PL_get_chars() and PL_get_filename().

  * ADDED: Support for default locale multibyte I/O using encoding 'text'.

  * ENHANCED: library url www_form_encode/2 not to encode _, and :.  Needed
    for some broken servers.  What is the full list we must use here?

  * FIXED: PL_get_chars() using CVT_WRITE.  Wim Delvaux.


VERSION 5.5.9 (March 02, 2005)
==============================

  * FIXED: Bug#12: poor error reporting on illegal module export list.
    Remy Haemmerle.

  * ADDED: Enh#21: hide details of library debug from the tracer.
    Holger Kanwischer.

  * FIXED: compiler error causing crashes on some weird variable patterns.
    With fix from Sergey Tikhonov.  Thanks!
