@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ENHANCED: give error on gensym(?, +).
+
   * FIXED: crash in PL_open_query() on undefined predicate.  Wim Delvaux.
 
   * FIXED: Doubles in the head on 64-bit platforms.  With many thinks to
